Persist assistant sessions and harden sync concurrency handling